--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ PyJWT>=2.10.1
 gunicorn>=20.1.0
 python-dotenv>=1.0.0
 cryptography>=41.0.0
-flask-jwt-extended-4.7.1
+flask-jwt-extended==4.4.4
 flask-cors
 PyCryptodome==3.19.0
